minor UI bug fixes on mobile device

--- a/src/app/calculator/calculator.component.css
+++ b/src/app/calculator/calculator.component.css
@@ -36,6 +36,6 @@
     padding: 0 1.4em 0;
 }
 .mat-form-field {
-    width: 500px;
+    width: 100%;
     max-width: 500px;
 }
