--- a/src/app/loan-apply/loan-apply.component.css
+++ b/src/app/loan-apply/loan-apply.component.css
@@ -31,6 +31,6 @@
     padding: 0 1.4em 0;
 }
 .mat-form-field {
-    width: 360px;
+    width: 100%;
     max-width: 360px;
 }
